<resources>
    <string name="app_name" translatable="false">Kamma Seva Samithi</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="profile" translatable="false">About Us</string>
    <string name="directory" translatable="false">Directory</string>
    <string name="news" translatable="false">News</string>
    <string name="events" translatable="false">Events</string>
    <string name="messages" translatable="false">Messages</string>
    <string name="donations" translatable="false">Donations</string>
    <string name="gallery" translatable="false">Gallery</string>
    <string name="greetings" translatable="false">Greetings</string>
    <string name="logo" translatable="false">logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="telugufont"> కదలి రండి కదలి రండి కమ్మ సోదరా\n
కలసి రండి కలసి రండి ఒక్కటిగా\n
ఎన్ని జన్మలెత్తినా\n
దొరకదు ఈ కమ్మని భాగ్యం\n
పరుల కోసం పాటుబడి\n
చేసుకో జీవితం సౌభాగ్యం\n

రైతువై\n
పారిశ్రామికవేత్తవై\n
విద్యాసౌరభాలదాతవై\n
సుసంపన్న రాజకీయవేత్తవై\n
యుగోదయం కోసం\n
మహోదయం కోసం\n
విజయధ్వజమెత్తిన\n
వినమ్ర విప్లవ మూర్తివి నీవే\n
ఆశలుడిగి\n
భీకరాలేమితో\n
వొడి మాడి కూలిన జీవితాలకు\n
జీవం పోసిన కమ్మ జాతి\n
అంకురానివి నీవే\n
రా! కదలి రా!! చేయిచేయి కలిపి\n
బాధాసర్పద్రష్టులకు అండగా దండు కడదాం\n
శ్రమను సేవను\n
పిడికిలిని ఒడిసిపట్టిన\n
ఒట్టి కంకి కాదు కమ్మకేతనమిది\n
కమ్మనైన భవిష్యత్తుకు\n
కమ్మని బాటలు వేసిన\n
కమ్మ సోదరా\n
కదలి రండి కలసి రండి\n
</string>
    <string name="qualification">Qualification</string>
    <string name="profession">Profession</string>
    <string name="designation">Designation</string>
    <string name="father_name">Father Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="email">Email</string>
    <string name="gothram">Gothram</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="age">Age</string>
    <string name="blood_group">Blood Group</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="reffered_by">Refferal No (optional)</string>
    <string name="native_address">Native Address</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="mobile">Mobile</string>
    <string name="present_address">Present Address</string>
    <string name="father_husband_name">Father / Husband Name</string>
    <string name="full_name">Full Name</string>
    <string name="enter_registered_mobile_no">Enter Registered Mobile No</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_membership_number">Enter Membership Number</string>
    <string name="approved">Approved</string>
    <string name="enter_title">Enter Title</string>
    <string name="edit">Edit</string>
    <string name="event_name">Event Name</string>
    <string name="update">Update</string>
    <string name="description">Description</string>
    <string name="event_date">Event_date</string>
    <string name="tentative_date">Tentative_date</string>
    <string name="venue">Venue</string>
    <string name="company">Company</string>
    <string name="pivotalsoft">Pivotalsoft</string>
    <string name="member_name">Member Name</string>
    <string name="relation">Relation</string>
    <string name="add_occation">Add Occation</string>
    <string name="save">Save</string>
    <string name="registration_notifications">Registration Notifications</string>
    <string name="donation_notifications">Donation Notifications</string>

    <string name="membership_no">Membership No</string>
    <string name="membership_type">Membership Type</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_member_id">Enter Member Id</string>
    <string name="no_data_found">No Data Found</string>
    <string name="indian_overseas_bank_seethammadhara">Indian Overseas Bank , Seethammadhara</string>
    <string name="bank">Bank :</string>
    <string name="a_c">A/C :</string>
    <string name="_291001000002259">291001000002259</string>
    <string name="ifsc_code">IFSC Code :</string>
    <string name="ifsc_code_ioba0002910">IOBA0002910</string>
    <string name="bank_account_details">Bank Account Details</string>
    <string name="kammasevasamithi_vizag">Kammasevasamithi,Vizag</string>
    <string name="regd_no_36_2014">Regd. No. 36/2014</string>
    <string name="d_no_49_53_7_13_t_2_sampada_galaxy_balayyasastri_layout">D.No. 49-53-7/13, T-2, Sampada Galaxy, Balayyasastri Layout,</string>
    <string name="seethammadhara_visakhapatnam_530013">Seethammadhara, VISAKHAPATNAM - 530013.</string>
    <string name="ph_0891_2559494_mobile_9491349494">Ph : 0891 - 2559494, Mobile : 9491349494</string>
    <string name="password">Password</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="aadhar_no">Aadhar No</string>


</resources>
