<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context="com.pivotalsoft.kammasevasamithi.EditPersonalinfoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/full_name"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"/>

    <EditText
        android:id="@+id/etFatherName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/father_name"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"/>

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/mobile_no"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"/>

    <EditText
        android:id="@+id/etGothram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/gothram"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"/>

    <EditText
        android:id="@+id/etDob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/date_of_birth"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"/>

    <EditText
        android:id="@+id/etBloodGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/blood_group"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"/>

    <EditText
        android:id="@+id/etPresentAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/present_address"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"/>

    <EditText
        android:id="@+id/etNativeAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/native_address"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"/>

</LinearLayout>
</android.support.v4.widget.NestedScrollView>