<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center">

    <EditText
        android:id="@+id/etQualification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/qualification"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"/>

    <EditText
        android:id="@+id/etProfission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/profession"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"/>

    <EditText
        android:id="@+id/etDesignation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/designation"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"/>

    <EditText
        android:id="@+id/etCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/company"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"/>
</LinearLayout>