<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pivotalsoft.kammasevasamithi.AcceptActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitXY"
            android:src="@drawable/avatar_author"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/etMemberName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/member_name"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/mobile_no"
            android:layout_marginTop="20dp"
            />


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_optional"
            android:layout_marginTop="20dp"/>



        <EditText
            android:id="@+id/etMembershipNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/membership_no"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/etmembershipType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/membership_type"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="false"
            />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
