<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.pivotalsoft.kammasevasamithi.AddFamilyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
       android:layout_gravity="center"
        >


        <EditText
            android:id="@+id/etMemberName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/member_name"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:background="@drawable/rounded_background"/>

        <EditText
            android:id="@+id/etRelation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/relation"
            android:layout_marginTop="10dp"
            android:focusable="false"
            android:clickable="true"
            android:padding="8dp"
            android:background="@drawable/rounded_background"
            />

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/mobile_no"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:background="@drawable/rounded_background"
            />

        <EditText
            android:id="@+id/etGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Gender"
            android:layout_marginTop="10dp"
            android:focusable="false"
            android:clickable="true"
            android:padding="8dp"
            android:background="@drawable/rounded_background"
            />

        <EditText
            android:id="@+id/etQualification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/qualification"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:background="@drawable/rounded_background"
            />

        <EditText
            android:id="@+id/etBloodGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/blood_group"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:background="@drawable/rounded_background"
            />


        <EditText
            android:id="@+id/etStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/event_date"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:background="@drawable/rounded_background"/>



        <EditText
            android:id="@+id/etOccation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/add_occation"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:background="@drawable/rounded_background"
            />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
