<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/imageButtonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="#00ffffff"
            android:src="@drawable/ic_cancel_black_24dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/imageButtonCancel"
            android:gravity="center_horizontal"
            android:text="@string/kammasevasamithi_vizag"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@+id/imageButtonCancel"
            android:gravity="center_horizontal"
            android:text="@string/bank_account_details"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bank"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="0.75"
                android:background="#56c2c2c2"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/indian_overseas_bank_seethammadhara"
                android:textSize="16sp"
                android:background="#1ec2c2c2"
                android:gravity="center_vertical"
                android:layout_weight="0.25"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/a_c"
                android:gravity="center"
                android:textSize="16sp"
                android:background="#56c2c2c2"
                android:layout_weight="0.75"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/textViewAccountNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/_291001000002259"
                android:background="#1ec2c2c2"
                android:textSize="16sp"
                android:layout_weight="0.25"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ifsc_code"
                android:gravity="center"
                android:textSize="16sp"
                android:background="#56c2c2c2"
                android:layout_weight="0.75"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/textViewIfsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/ifsc_code_ioba0002910"
                android:textSize="16sp"
                android:background="#1ec2c2c2"
                android:layout_weight="0.25"
                android:padding="5dp"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>