<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentLayout"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:background="@android:color/white"
    tools:context="com.pivotalsoft.kammasevasamithi.AddNewsActivity">




    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_title"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"
        />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/enter_date"
        android:focusable="false"
        android:clickable="false"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"/>


    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/enter_description"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"/>
</LinearLayout>
